Fixed gaps in features block

--- a/src/styles/blocks/features.scss
+++ b/src/styles/blocks/features.scss
@@ -13,23 +13,23 @@
     background-image: url(/images/features-mobile.png);
     background-blend-mode: darken;
     background-repeat: no-repeat;
-    background-position: 100% 100%;
+    background-position: 100% bottom;
     background-size: contain;
 
-    padding: 30px 30px 170px;
+    padding: 30px 30px 235px;
     margin-left: -28px;
     margin-right: -28px;
 
     @include onTablet {
       display: block;
-      background-size: auto 57%;
+      background-size: auto 50%;
       margin-right: 0;
       margin-left: 0;
     }
 
     @include onDesktop {
       display: grid;
-      padding-bottom: 0;
+      padding-bottom: 30px;
       background-size: auto 47%;
     }
   }
@@ -38,6 +38,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    max-width: 260px;
 
     &:not(:last-child) {
       display: none;
@@ -47,6 +48,10 @@
 
       &:not(:last-child) {
         display: flex;
+      }
+
+      &:first-child {
+        padding-bottom: 56px;
       }
     }
 
@@ -67,5 +72,9 @@
     row-gap: 10px;
     list-style: disc;
     padding-left: 16px;
+  }
+
+  &__item {
+    line-height: 21px;
   }
 }
